# schedule-mouse-click

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  publish.yml
src/: args.rs  duration_to_sleep_parser.rs  main.rs  terminal.rs  utils.rs
